<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="close">关闭</string>
        <string name="quit">退出</string>
        <string name="repay_day">还款日期</string>
        <string name="repay_amount">回款金额</string>
        <string name="Immediate_investment">立即投资</string>
        <string name="expected_annual_yield">历史年化</string>
        <string name="expected_annual_yield2">近三个月历史年化</string>
        <string name="annual_yield">预期年化</string>
        <string name="status">状态</string>
        <string name="open">开启</string>
        <string name="action_settings">Settings</string>
        <string name="cancel">取消</string>
        <string name="notice">通　知</string>
        <string name="ok">确定</string>
        <string name="no_data">暂无数据</string>
        <string name="on_or_off">是否开启</string>
        <string name="bitmap_outofmemory">图片过大无法加载</string>
        <string name="network_error">网络异常</string>
        <string name="login_password">登录密码</string>
        <string name="enter_password_tips">请输入登录密码</string>
        <string name="enter_original_password_tips">请输入原密码</string>
        <string name="enter_email_tips">请输入电子邮箱</string>
        <string name="enter_Verification_tips">请输入验证码</string>
        <string name="enter_phone_ver_tips">手机验证</string>
        <string name="get_smscodefail_tips">收不到短信? 您可语音获取</string>
        <string name="send_email">发送到邮箱</string>
        <string name="change_email">更改邮箱</string>
        <string name="total_assets_title">总资产</string>
        <string name="total_assets">总资产 (元)</string>
        <string name="accumulated_income">累计收益 (元)</string>
        <string name="account_balance_title">账户余额</string>
        <string name="available_balance_title">可用余额 (元)</string>
        <string name="available_balance">可用余额 (元)</string>
        <string name="blocked_fund">冻结资金 (元)</string>
        <string name="received_funds">待收资金 (元)</string>
        <string name="withdrawal_amount">提现金额</string>
        <string name="withdrawal_cost">提现费用</string>
        <string name="deducted_cost">扣款金额</string>
        <string name="withdrawal_to">提现到</string>
        <string name="confim_paypassword">确认提现</string>
        <string name="submit">提交</string>
        <string name="enter_paypassword_tips">请输入支付密码</string>
        <string name="enter_newpaypassword_tips">请输入新支付密码</string>
        <string name="arrival_tips">1-2个工作日（双休日和法定节假日除外）之内到账</string>
        <string name="process_time">处理时间</string>
        <string name="jump_to_bank_tips">点击下一步进入徽商银行页面进行提现操作</string>
        <string name="autofinanc_tips">*建议您授权徽商银行自动投标，减少您操作过程中校验密码的重复操作，提高投标效率。自动投标授权</string>
        <string name="no_appstore">未发现应用市场</string>
        <string name="accountdialogtext">亲亲小财已与徽商银行合作进行资金存管，为了您的资金安全，请您开通存管账户。</string>
        <string name="account_empty_error">请输入用户名或手机号</string>
        <string name="password_empty_error">密码不能为空</string>
        <string name="password_equals_error">两次密码输入不一致</string>
        <string name="password_format_error">请正确输入8-15位密码，需字母数字及特殊符号的组合</string>
        <string name="password_format_error_old">请正确输入8-15位旧密码</string>
        <string name="password_format_error_new">请正确输入8-15位新密码，需是数字字母特殊字符的组合</string>
        <string name="password_inputtype_tips">8-15位字符（字母/数字/特殊符号)</string>
        <string name="paypwd_format_error">请正确输入6-15位支付密码</string>
        <string name="paypwd_format_error_old">请正确输入6-15位原支付密码</string>
        <string name="paypwd_format_error_new">请正确输入6-15位新支付密码</string>
        <string name="login_timeout_tips">登录超时,请重新登录</string>
        <string name="phonenumber_empty_error">手机号不能为空</string>
        <string name="phonenumber_format_error">请正确输入11位手机号</string>
        <string name="please_input_authcode_tips">请输入短信验证码</string>
        <string name="feedback_tips">您留下的每一个字都能帮助我们改善产品期待您的反馈!</string>
        <string name="no_project">暂无项目</string>
        <string name="project_id">项目编码</string>
        <string name="project_info">项目简介</string>
        <string name="project_name">项目名称</string>
        <string name="project_status">项目状态</string>
        <string name="no_recorder">暂无记录</string>
        <string name="credit_rating">信用等级</string>
        <string name="loan_amount">借款金额</string>
        <string name="annual_rate">年化利率</string>
        <string name="loan_time">借款时间</string>
        <string name="annual_rate2">预期年化</string>
        <string name="life_of_loan">借款期限</string>
        <string name="need_repay_amount">还需金额</string>
        <string name="financ_amount">投资金额</string>
        <string name="financ_amount_time">投资期限</string>
        <string name="financ_minlimit_tips">请输入50元的整数倍</string>
        <string name="financ_progress">投标进度</string>
        <string name="repay_term">还款期限</string>
        <string name="repay_monthly">月还本息</string>
        <string name="repay_detail">还款详情</string>
        <string name="interest_starttime">起息时间</string>
        <string name="financ_minlimit">最低起投</string>
        <string name="repay_mode">还款方式</string>
        <string name="need_repay_money">待还本息</string>
        <string name="next_repay_day">下个合约还款日</string>
        <string name="other_info">其他信息</string>
        <string name="financ_name">投标用户</string>
        <string name="financ_time">投标时间</string>
        <string name="name">姓名</string>
        <string name="enter_name">请输入姓名</string>
        <string name="idcard_number">身份证号</string>
        <string name="idcard_number_tips">请输入身份证号</string>
        <string name="enter_binding_phonenumber_tps">请输入您绑定的手机号码</string>
        <string name="enter_phonenumber_tps">请输入手机号</string>
        <string name="sms">短信</string>
        <string name="voice">语音</string>
        <string name="next">下一步</string>
        <string name="telephonenumber_title">手机号码</string>
        <string name="new_telephonenumber_title">新手机号码</string>
        <string name="enter_telephonenumber_title">请输入手机号码</string>
        <string name="confirm_bancard_info"> * 请核对卡号和银行名称,信息正确请点击确认,如信息有误点击返回重拍</string>
        <string name="banknameaccount">银行存管账户</string>
        <string name="bankname">银行名称</string>
        <string name="belong_bankname">所属银行</string>
        <string name="choose_belong_bankname">请选择所属银行</string>
        <string name="check_bank_list">查看支持银行</string>
        <string name="bankcard_title">银行卡信息</string>
        <string name="bankcard_info_tips">*请正确填写您的银行卡信息，用于提高您的提现额度</string>
        <string name="bankcard_num">银行卡号</string>
        <string name="enter_bankcard_num">请输入银行卡号</string>
        <string name="enter_auto_bankcard_num">银行卡自动扫描</string>
        <string name="enter_authed_idcardnum_tips">如身份证已认证请输入</string>
        <string name="oldpassword">原始密码</string>
        <string name="newpassword">新密码</string>
        <string name="password_confim">确认密码</string>
        <string name="password_change_confim">确认修改</string>
        <string name="enter_newpassword">请输入新密码</string>
        <string name="enter_password_again">请再次输入新密码</string>
        <string name="is_forget_gestur">忘记手势密码?</string>
        <string name="no_premisstion_of_camera">无法获取摄像头数据，请检查是否已经打开摄像头权限</string>
        <string name="unbind">解除绑定?</string>
        <string name="unknow">未知</string>
        <string name="share">分享</string>
        <string name="follow_official_mblog">关注官方微博</string>
        <string name="qq_space">QQ空间</string>
        <string name="involving_project">涉及项目</string>
        <string name="loading_get_err">获取数据失败，请稍后重试，或者手动刷新</string>
        <string name="loading_connect_err">当前网络不可用，请设置您的网络。</string>
        <string name="net_setting_txt">去往设置</string>
        <string name="button_refresh_txt">刷新</string>
        <string name="mobile_net_txt">现在使用的手机的流量</string>
        <string name="first_info_Cardholder">持卡人</string>
        <string name="first_info_Cardholder_name">请输入持卡人姓名</string>
        <string name="first_info_Cardholder_realname">请输入您的真实姓名</string>
        <string name="first_info_checkidcard_title">身份证核对信息</string>
        <string name="first_info_checkbankcard_title">银行卡核对信息</string>
        <string name="home_page_title">首页</string>
        <string name="index_title">亲亲小财</string>
        <string name="financ_title">理财</string>
        <string name="project_title">项目</string>
        <string name="quick_tender">快速投标</string>
        <string name="project_details">项目详情</string>
        <string name="check_project_details">查看项目详情</string>
        <string name="full_tender">全部标</string>
        <string name="app_account_rechange">充值</string>
        <string name="enter_tendernumber_tips">请输入投标金额</string>
        <string name="app_tendernumber_tips">投标中金额</string>
        <string name="tender_format_error_tips">请输入50的整数倍</string>
        <string name="single_tender_amount">单笔投标金额</string>
        <string name="obligated_balance">账号保留余额</string>
        <string name="back_all">全部</string>
        <string name="userhead_icon">头像</string>
        <string name="app_more">更多</string>
        <string name="more_about_qiniqnlicai">关于亲亲小财</string>
        <string name="more_about_us">关于我们</string>
        <string name="more_version_information">版本信息</string>
        <string name="more_service_telephone">客服电话</string>
        <string name="more_common_question">常见问题</string>
        <string name="more_share_qiniqnlicai">分享亲亲小财</string>
        <string name="setting_paypwd">设置支付密码</string>
        <string name="confim_authbid">自动投标授权</string>
        <string name="confim_authtransfer">自动债转授权</string>
        <string name="login_title">登录</string>
        <string name="forget_password">忘记密码</string>
        <string name="registe_dllregsvr">一键注册</string>
        <string name="agree_loan_contract">我已阅读并同意</string>
        <string name="agree_loan_contract2">已阅读并同意《借贷服务协议和风险提示》</string>
        <string name="agree_regisargument">《出借人注册协议》</string>
        <string name="login_btn_text">登录</string>
        <string name="project_btn_text">协议模板</string>
        <string name="book_btn_text">风险提示书</string>
        <string name="tips">提示</string>
        <string name="login_sms_vericode_tips">* 为了您的账号安全，需验证手机号</string>
        <string name="activity_web">您邀请,我发钱</string>
        <string name="register_have_space">注册</string>
        <string name="index_reset_password">重置密码</string>
        <string name="index_password">密码</string>
        <string name="login_username">用户名</string>
        <string name="login_allusername">用户姓名</string>
        <string name="login_username_tips">4-16位字符(中文/英文/数字/\"_\")</string>
        <string name="login_unchange_username">* 用户名一旦设定不能更改</string>
        <string name="username_empty_tips">请输入用户名</string>
        <string name="login_phone_number">请输入用户名或手机号</string>
        <string name="login_phonenumber">请输入手机号</string>
        <string name="login_phone_password">请输入密码</string>
        <string name="switch_password">切换密码　</string>
        <string name="phonenumber">手机号</string>
        <string name="spech">验证码</string>
        <string name="get_spech">获取验证码</string>
        <string name="Invitation_code">邀请码</string>
        <string name="enter_Invitation_code">请输入邀请码（非必填）</string>
        <string name="get_spech_tips">收不到短信？您可</string>
        <string name="bind_new_bankcard">绑定新银行卡</string>
        <string name="can_the_withdrawal_amount">可提金额</string>
        <string name="do_the_withdrawal_amount">提取金额</string>
        <string name="enter_the_withdrawal_amount">请输入提现金额</string>
        <string name="withdrawal_fee_tips">* 每2万元收取3元手续费(2万元以内提现,每笔收取3元手续费)\n\u0020\u0020\u0020提现手续费由第三方支付公司收取\n* 1-2个工作日（双休日和法定节假日除外）之内到账</string>
        <string name="completed_bankcardinfo_tips">* 可通过完善银行卡信息，增加自己的提现额度</string>
        <string name="bank_toplimit_tips">每笔5W,单日最高20W</string>
</resources>