<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xinde"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginTop="@dimen/size_30"
        android:background="@drawable/i_img_login_lines"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_90"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="@dimen/size_130"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size_30"
            android:layout_marginStart="@dimen/size_30"
            android:gravity="center_vertical"
            android:text="@string/account_balance_title"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/textsize_28"/>

        <TextView
            android:id="@+id/account_balance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:layout_toRightOf="@+id/textView1"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textColor="@color/text_color_99"
            android:textSize="@dimen/textsize_28"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/size_28"
            android:background="@drawable/i_img_login_lines"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_90"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="@dimen/size_130"
            android:layout_height="match_parent"
            android:layout_above="@+id/view"
            android:layout_alignLeft="@+id/view"
            android:layout_alignStart="@+id/view"
            android:gravity="center_vertical"
            android:text="@string/can_the_withdrawal_amount"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/textsize_28"/>

        <TextView
            android:id="@+id/can_mention_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:layout_toRightOf="@+id/textView2"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textColor="@color/text_color_99"
            android:textSize="@dimen/textsize_28"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/size_28"
            android:background="@drawable/i_img_login_lines"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_90"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_money"
            android:layout_width="@dimen/size_130"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size_30"
            android:layout_marginStart="@dimen/size_30"
            android:gravity="center_vertical"
            android:text="@string/do_the_withdrawal_amount"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/textsize_28"/>

        <android.inputmethodservice.ExtractEditText
            android:id="@+id/edittext_putmoney"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_toRightOf="@+id/tv_money"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/enter_the_withdrawal_amount"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:paddingRight="@dimen/size_20"
            android:textColorHint="@color/text_color_d9"
            android:textSize="@dimen/textsize_28"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/size_28"
            android:background="@drawable/i_img_login_lines"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_Withdrawalto"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/size_90"
        android:background="@color/white">

        <TextView
            android:id="@+id/tixiandao"
            android:layout_width="@dimen/size_130"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size_30"
            android:layout_marginStart="@dimen/size_30"
            android:gravity="center_vertical"
            android:text="@string/withdrawal_to"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/textsize_28"/>

        <TextView
            android:id="@+id/input_bandcard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_toRightOf="@+id/tixiandao"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/bind_new_bankcard"
            android:textColor="@color/text_color_99"
            android:textSize="@dimen/size_28"/>

        <TextView
            android:id="@+id/input_bandnumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/input_bandcard"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textColor="@color/text_color_99"
            android:textSize="@dimen/textsize_28"/>

        <TextView
            android:id="@+id/input_toplimit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/size_15"
            android:maxWidth="@dimen/size_200"
            android:layout_toLeftOf="@+id/input_arror_img"
            android:gravity="center_vertical"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/bank_toplimit_tips"
            android:textColor="@color/text_color_99"
            android:textSize="@dimen/textsize_20"/>

        <ImageView
            android:id="@+id/input_arror_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/size_30"
            android:gravity="center_vertical"
            android:src="@drawable/jiantou_image"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@drawable/i_img_login_lines"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_30"
        android:layout_marginRight="@dimen/size_30"
        android:layout_marginTop="@dimen/size_15"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="@color/text_color_99"
            android:textSize="@dimen/textsize_28"/>

        <TextView
            android:id="@+id/balance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_8"
            android:maxLines="1"
            android:textColor="@color/text_color_99"
            android:textSize="@dimen/textsize_24"/>

        <ImageButton
            android:id="@+id/balance_tips_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10"
            android:background="@color/trans"
            android:src="@drawable/i_btn_big_normal"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_90"
        android:layout_marginLeft="@dimen/size_30"
        android:layout_marginRight="@dimen/size_30"
        android:layout_marginTop="@dimen/size_30"
        android:background="@drawable/i_btn_big_normal"
        android:clickable="false"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_34"/>

    <TextView
        android:id="@+id/completed_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_38"
        android:layout_marginRight="@dimen/size_30"
        android:layout_marginTop="@dimen/size_22"
        android:gravity="bottom"
        android:text="@string/completed_bankcardinfo_tips"
        android:textColor="@color/text_color_66"
        android:textSize="@dimen/textsize_24"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_38"
        android:layout_marginRight="@dimen/size_30"
        android:layout_marginTop="@dimen/size_9"
        android:lineSpacingExtra="@dimen/size_12"
        android:text="@string/withdrawal_fee_tips"
        android:textColor="@color/text_color_66"
        android:textSize="@dimen/textsize_24"/>

</LinearLayout>